@@ -39,7 +39,7 @@ index_ewebalizer=Webalizer does not appear to be installed on your system, or ha
 index_eopenssl=The $1 command was not found on your system, and it is needed to set up SSL websites. If you do not plan to host SSL sites, this feature should be disabled in Virtualmin's <a href='$2'>module configuration</a> page.
 index_emodssl=The Apache configuration on your system appears to be missing the module $1, which is needed to host SSL websites. If you do not plan to host SSL sites, this feature should be disabled in Virtualmin's <a href='$2'>module configuration</a> page.
 index_emodssl2=The Apache configuration on your system does not appear to be listening on port $1, which is needed to host SSL websites. If you do not plan to host SSL sites, this feature should be disabled in Virtualmin's <a href='$2'>module configuration</a> page.
-index_esendmail=The Sendmail mail server does not appear to be installed on your system, or has not yet been set up properly in Webmin's <a href='$1'>Sendmail Configuration</a> module. If you are running a different mail server, select it on the <a href='$2'>module configuration</a> page.
+index_esendmail=The Sendmail mail server does not appear to be installed on your system, or has not yet been set up properly in Webmin's <a href='$1'>Sendmail Mail Server</a> module. If you are running a different mail server, select it on the <a href='$2'>module configuration</a> page.
 index_epostfix=The Postfix server does not appear to be installed on your system, or has not yet been set up properly in Webmin's <a href='$1'>Postfix Configuration</a> module. If you are running a different mail server, select it on the <a href='$2'>module configuration</a> page.
 index_eqmail=The QMail server does not appear to be installed on your system, or has not yet been set up properly in Webmin's <a href='$1'>QMail Configuration</a> module. If you are running a different mail server, select it on the <a href='$2'>module configuration</a> page.
 index_eqmailldap=The QMail server does not appear to be installed on your system, is not configured to use LDAP, or has not yet been set up properly in Webmin's <a href='$1'>QMail Configuration</a> module. If you are running a different mail server, select it on the <a href='$2'>module configuration</a> page.
@@ -1542,6 +1542,7 @@ check_preload=Updating Virtualmin library pre-load settings ..
 check_esendmailbccs=Automatic BCCing of outgoing email is not supported by the Sendmail mail server, and so must be turned off on the <a href='$1'>module configuration</a> page.
 check_eqmailbccs=Automatic BCCing of outgoing email is not supported by the Qmail mail server, and so must be turned off on the <a href='$1'>module configuration</a> page.
 check_epostfixbccs=Automatic BCCing of outgoing email cannot be enabled unless a BCC map is defined in the <a href='$1'>Postfix Mailserver</a> module, or manually in the Postfix configuration file. Otherwise it must be turned off on the <a href='$2'>module configuration</a> page.
+check_esendmailaddrs=Sendmail is only accepting SMTP connections on the following ports : $1. Email from other systems on the Internet will not be accepted. This can be changed in the <a href='$2'>Sendmail Mail Server</a> module.
 check_ealias_maps=A problem was found with your Postfix alias maps : $1
 check_evirtual_maps=A problem was found with your Postfix virtual maps : $1
 check_ecanonical_maps=A problem was found with your Postfix canonical maps, used for outgoing address mapping : $1
